# LegoBuilder

./: .gitignore  README.md  UR5-Setup.txt  requirements.txt
Brickpick_main/: myServoController.cpp  myServoController.h
LegoBuilder/: LegoBuilder.py  UR5.py
lego_builder/: README.md
lego_builder_brickpick/: README.md  setup.cfg
lego_builder_brickpick/config/: config.yaml
lego_builder_brickpick/nodes/: brickpick_adapter_node.py
lego_builder_brickpick/onboard/: Brickpick_main.ino  myServoController.h
lego_builder_ur5/: BrickPick.py
legobuilder/: Brick.py  LegoBuilder.py  package.xml  setup.cfg  setup.py
legobuilder/legobuilder/: my_node.py
legobuilder_brickpick/: package.xml  setup.cfg  setup.py
legobuilder_brickpick/config/: package_config.yaml
legobuilder_brickpick/launch/: default_launch.py
legobuilder_brickpick/legobuilder_brickpick/: brickpick_adapter.py  brickpick_adapter_node.py  brickpick_teleop_node.py  hello_world_node.py
legobuilder_bringup/: package.xml  setup.cfg  setup.py
legobuilder_bringup/launch/: core_launch.py  demo1_launch.py  teleop_launch.py
legobuilder_control/: package.xml  setup.cfg  setup.py
legobuilder_control/legobuilder_control/: Controllers.py  LegoDetector.py  brickpick_teleop_node.py  legobuilder_control_node.py  legobuilder_planner_node.py  utils.py
legobuilder_drivers/: package.xml  setup.cfg  setup.py
legobuilder_drivers/legobuilder_drivers/: brickpick_adapter.py  (+2 more)
legobuilder_interfaces/: CMakeLists.txt  package.xml
legobuilder_perception/: package.xml  setup.cfg  setup.py
stale/: UR5.py
(+30 files in other folders)
