<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>legobuilder</name>
  <version>0.0.0</version>
  <description>Metapackage for Lego Builder project</description>
  <maintainer email="ctchang001@gmail.com">Chris Chang</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>legobuilder_bringup</exec_depend>
  <exec_depend>legobuilder_control</exec_depend>
  <exec_depend>legobuilder_drivers</exec_depend>
  <exec_depend>legobuilder_interfaces</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
